# reference-parser

./: LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
citationparser/: parse.py
citationparser/classes/: citation.py  reference.py  span.py  visitor.py
citationparser/constants/: grammar.txt  paths.py
referenceparser/: grammar.py  parse.py  visitor.py
referenceparser/classes/: citation.py  page.py  reference.py  span.py  visitor.py
referenceparser/constants/: grammar.txt  paths.py  regex.txt
referenceparser/regex/: matcher.py  pattern.py
tests/: test_parse.py
