[tool.poetry]
name = "reference-parser"
version = "0.1.0"
description = "Bible reference parser"
authors = ["Ivan Dustin Bilon <ivan22.dust@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "referenceparser" },
]

[tool.poetry.dependencies]
python = "^3.9"
parsimonious = "^0.10.0"
pydantic = "^2.7.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
