[tool.poetry]
name = "reference-parser"
version = "0.3.0"
description = "Bible reference parser"
authors = ["Ivan Dustin Bilon <ivan22.dust@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "referenceparser" }]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.7.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
black = "^24.4.2"
flake8 = "^7.0.0"
pylint = "^3.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
